[package]
name = "apex_omega"
version = "87.0.0"
edition = "2021"

[dependencies]
# Ethereum & Flashbots
ethers = { version = "2.0", features = ["ws", "rustls", "abigen"] }
ethers-flashbots = "0.14"

# Async & Networking
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] } 
url = "2.0"
hex = "0.4"

# Data & Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
anyhow = "1.0"

# Math & Graph
petgraph = "0.6"

# UI & Logging
colored = "2.0"
log = "0.4"
env_logger = "0.10"

# --- THE FIX: MANUALLY POINT TO MAIN.RS IN ROOT ---
[[bin]]
name = "apex_omega"
path = "main.rs"
